gyms detail added

--- a/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
+++ b/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
@@ -1,3 +1,4 @@
+<o-form-layout-manager title="{{'GYMS' | oTranslate }}" separator=" " mode="tab" label-columns="gym_name;gym_city">
 <div fxFill fxLayout="column" fxLayoutAlign="start">
   <o-table
     attr="gymsTable"
@@ -11,3 +12,4 @@
   </o-table>
 
 </div>
+</o-form-layout-manager>
