Visible-columns modified

--- a/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
+++ b/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
@@ -11,7 +11,7 @@
       entity="gym"
       keys="gymid"
       columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;"
-      visible-columns="photo;name;address;city;phone;email;schedule;description;rate"
+      visible-columns="photo;name;city;schedule;rate;"
       query-rows="20"
     >
       <o-table-column
