Added categories column

--- a/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
+++ b/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
@@ -10,8 +10,8 @@
       service="gyms"
       entity="gym"
       keys="gymid"
-      columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;"
-      visible-columns="photo;name;city;schedule;rate;"
+      columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;categories;"
+      visible-columns="photo;name;city;schedule;rate;categories;"
       query-rows="20"
     >
       <o-table-column
