--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+#photo > div > div > img {
+    height: 20rem;
+    width:20rem;
+    border-radius: 10rem;
+  }
