gym images implemented

--- a/frontend/src/app/main/gyms/gyms-detail/gyms-detail.component.html
+++ b/frontend/src/app/main/gyms/gyms-detail/gyms-detail.component.html
@@ -78,4 +78,28 @@
       </o-row> -->
     </o-column>
   </o-row>
+  <o-column>
+    <o-image
+      id="image1"
+      attr="image1"
+      empty-image="assets/images/no-image.png"
+      sql-type="OTHER"
+    ></o-image>
+  </o-column>
+  <o-column>
+    <o-image
+      id="image2"
+      attr="image2"
+      empty-image="assets/images/no-image.png"
+      sql-type="OTHER"
+    ></o-image>
+  </o-column>
+  <o-column>
+    <o-image
+      id="image3"
+      attr="image3"
+      empty-image="assets/images/no-image.png"
+      sql-type="OTHER"
+    ></o-image>
+  </o-column>
 </o-form>
