service entity backend created

--- a/frontend/src/app/main/gyms/gyms-detail/gyms-detail.component.html
+++ b/frontend/src/app/main/gyms/gyms-detail/gyms-detail.component.html
@@ -85,6 +85,8 @@
         attr="image1"
         empty-image="assets/images/no-image.png"
         sql-type="OTHER"
+        type="image"
+        image-type="base64"
       ></o-image>
     </o-column>
     <o-column>
@@ -93,6 +95,8 @@
         attr="image2"
         empty-image="assets/images/no-image.png"
         sql-type="OTHER"
+        type="image"
+        image-type="base64"
       ></o-image>
     </o-column>
     <o-column>
@@ -101,6 +105,8 @@
         attr="image3"
         empty-image="assets/images/no-image.png"
         sql-type="OTHER"
+        type="image"
+        image-type="base64"
       ></o-image>
     </o-column>
   </div>
