services for gym added

--- a/frontend/src/app/main/gyms/gyms-detail/gyms-detail.component.html
+++ b/frontend/src/app/main/gyms/gyms-detail/gyms-detail.component.html
@@ -57,6 +57,7 @@
           grouping="no"
           fxFlex="40"
         ></o-integer-input>
+        <!-- Schedule Column -->
         <o-text-input
           class="input-padding"
           attr="schedule"
