--- a/frontend/src/app/main/gyms/gyms-detail/gyms-detail.component.html
+++ b/frontend/src/app/main/gyms/gyms-detail/gyms-detail.component.html
@@ -61,8 +61,16 @@
         <o-text-input
           class="input-padding"
           attr="schedule"
-          fxFlex="20"
+          fxFlex="40"
         ></o-text-input>
+        <!-- State Column -->
+        <o-slide-toggle 
+        class="input-padding"
+        attr="state" 
+        label="{{ 'state' | oTranslate }}" 
+        [data]="getValue()" 
+        read-only="no"
+        ></o-slide-toggle>
       </o-row>
       <o-row>
         <!-- Email Column -->
