detail gym user added

--- a/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
+++ b/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
@@ -1,61 +1,9 @@
-<!--<o-form-layout-manager
-  title="{{ 'GYMS' | oTranslate }}"
-  separator=" "
-  mode="tab"
-  label-columns="name"
->
-<div fxFill>
-  <o-grid #gymsGrid
-    attr="gymsGrid"
-    service="gyms"
-    entity="gym"
-    keys="gymid"
-    columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;categories;image1;image2;image3;"
-    query-rows="8" show-page-size="true" page-size-options="4;8;16" orderable="true" quick-filter="true"
-    sortable-columns="name" controls="true" gutter-size="18px" detail-mode="none"
-    >
-  <o-grid-item *ngFor="let list of gymsGrid.dataArray">
-  <div class= "container" (click)="openDetail(list)">
-
-    <div class="containerphoto">
-      <o-image class = "image1" attr="photo" data="{{ list.photo }}" read-only = "true" show-controls = "false" 
-      type="image"
-      empty-image="assets/images/no-image.png"
-      image-type="base64"
-      ></o-image>
-    </div>
-
-    <div class="name">
-      <span><b>{{ list.name }}</b></span>
-    </div>
-
-    <div class="city">
-      <mat-icon>location_city</mat-icon><span><i>{{ list.city }}</i></span>
-    </div>
-
-    <div class="schedule">
-      <mat-icon>schedule</mat-icon><span>{{ list.schedule }}</span>
-    </div>
-    
-    <div class="rate">
-      <mat-icon>star</mat-icon><span>{{ list.rate }} {{ 'stars' | oTranslate }}</span>
-    </div>
-    
-    <div class="categories">
-      <mat-icon>checklist</mat-icon><span>{{ list.categories }}</span>
-    </div>
-
-  </div>
-    </o-grid-item>
-  </o-grid>
-</div>
-</o-form-layout-manager> -->
-
 <o-form-layout-manager
+  attr="gymsLayoutManager"
   title="{{ 'GYMS' | oTranslate }}"
-  separator=" "
   mode="tab"
   label-columns="name"
+  store-state="no"
 >
   <div fxFill>
     <o-table
@@ -63,9 +11,10 @@
       service="gyms"
       entity="gym"
       keys="gymid"
-      columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;categories;image1;image2;image3;"
-      visible-columns="photo;name;city;schedule;rate;categories;"
+      columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;categories;image1;image2;image3"
+      visible-columns="photo;name;city;schedule;rate;categories"
       query-rows="20"
+      store-state="no"
     >
       <o-table-column
         attr="photo"
@@ -77,7 +26,8 @@
         empty-image="assets/images/no-image.png"
         image-type="base64"
       ></o-table-column>
-      
+     
     </o-table>
   </div>
 </o-form-layout-manager>
+
