--- a/frontend/src/app/main/services-gymadmin/service-gymadmin-home/service-gymadmin-home.component.html
+++ b/frontend/src/app/main/services-gymadmin/service-gymadmin-home/service-gymadmin-home.component.html
@@ -13,6 +13,7 @@
       keys="serviceid"
       columns="serviceid;name;description;duration;price;categoryid;gymid;categories"
       visible-columns="name;description;duration;price;categories"
+      delete-button="false"
       query-rows="20"
       store-state="no"
     >
