--- a/frontend/src/app/main/services-gymadmin/service-gymadmin-new/service-gymadmin-new.component.html
+++ b/frontend/src/app/main/services-gymadmin/service-gymadmin-new/service-gymadmin-new.component.html
@@ -31,7 +31,12 @@
             <o-combo attr="categoryid" label="category" fxFlex="50" service="categories" entity="category" keys="categoryid" columns="categoryid;name"
                     visible-columns="name" value-column="categoryid" class="input-padding"></o-combo>
         </o-row>
-    
+
+        <o-row>
+          <o-combo attr="gymid" label="gym" fxFlex="50" service="gyms" entity="gym" keys="gymid" columns="gymid;name"
+                  visible-columns="name" value-column="gymid" class="input-padding"></o-combo>
+        </o-row>
+        
     </o-column>
   </o-row>
 </o-form>
