--- a/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
+++ b/frontend/src/app/main/gyms/gyms-home/gyms-home.component.html
@@ -13,6 +13,7 @@
       keys="gymid"
       columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;categories;image1;image2;image3"
       visible-columns="photo;name;city;schedule;rate;categories"
+      delete-button="false"
       query-rows="20"
       store-state="no"
     >
@@ -31,3 +32,21 @@
   </div>
 </o-form-layout-manager>
 
+
+<!-- <o-table #table fxFlex attr="table"
+
+filter-case-sensitive="false"
+[static-data]="data"
+insert-button="true"
+export-button="true"   
+columns-visibility-button="true"
+delete-button="false" refresh-button="false"    
+select-all-checkbox="false" 
+show-buttons-text="true" 
+controls="true" show-title="true"    
+pagination-controls="no" 
+edition-mode="none" 
+detail-mode="none" 
+horizontal-scroll="false" 
+auto-adjust="false" 
+virtual-scroll="no" ></o-table> -->
